[css] fixed css on mobile and added background image on us Fact files

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,4 @@
   .app__pages {
     padding: 0px 20px;
   }
-  /* .products {
-    font-size: 1.2rem;
-  } */
 }
